# Shiaarak

./: .gitattributes  .gitignore  .prettierrc.json  LICENSE  README.ar.md  README.md  cSpell.json  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  logo.json  logo.ts  main.tsx  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Menus.tsx  Preview.tsx
src/components/modals/: Import.tsx  Lang.tsx
src/components/selectors/: Color.tsx  Padding.tsx  Res.tsx  Size.tsx
src/components/tabs/: Canvas.tsx  Icon.tsx
src/langs/: ar.json  en.json
