[package]
name = "shiaarak"
version = "0.0.0"
description = "Cross-platform application for graphic designers and their clients"
homepage = "https://github.com/Shiaarak/Shiaarak"
repository = "https://github.com/Shiaarak/Shiaarak"
authors = ["The Alpha"]
license = "GPL-3.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
toml = "0.8.11"
image = "0.25.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
